fix: footer should align differently only when dataList mode

--- a/templates/Element/Form/relations.scss
+++ b/templates/Element/Form/relations.scss
@@ -208,6 +208,11 @@
             }
         }
 
+        footer.last-child-auto {
+            > :last-child {
+                margin-left: auto;
+            }
+        }
     }
 
     &.removed {
